// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-0[data-size='small'] {
  height: 2.5rem;
}

.emotion-0[data-size='medium'] {
  height: 3rem;
}

.emotion-2 {
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2[data-checked="false"]:active:not([data-error="true"]):not([data-disabled="true"]),
.emotion-2[data-checked="false"]:hover:not([data-error="true"]):not([data-disabled="true"]) {
  box-shadow: none;
}

.emotion-2:hover,
.emotion-2:active {
  box-shadow: none;
  border: none;
}

.emotion-2:hover:not([data-error='true'][data-disabled='true']),
.emotion-2:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-2[data-checked='true'] {
  border: none;
}

.emotion-2 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-2[data-checked='true'] label {
  color: #ffffff;
}

.emotion-2:not([data-checked='true']) label:hover {
  color: #641cb3;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="emotion-0 emotion-1"
          data-size="small"
        >
          <div
            class="emotion-2 emotion-3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            style="--uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndc uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="«r2»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="«r2»"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-2 emotion-3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            style="--uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndc uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="«r6»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="«r6»"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  position: relative;
}

.emotion-0[data-size='small'] {
  height: 2.5rem;
}

.emotion-0[data-size='medium'] {
  height: 3rem;
}

.emotion-2 {
  border: none;
  padding: 0.5rem 1rem;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  white-space: nowrap;
  background: transparent;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2[data-checked="false"]:active:not([data-error="true"]):not([data-disabled="true"]),
.emotion-2[data-checked="false"]:hover:not([data-error="true"]):not([data-disabled="true"]) {
  box-shadow: none;
}

.emotion-2:hover,
.emotion-2:active {
  box-shadow: none;
  border: none;
}

.emotion-2:hover:not([data-error='true'][data-disabled='true']),
.emotion-2:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.emotion-2[data-checked='true'] {
  border: none;
}

.emotion-2 label {
  -webkit-transition: color 300ms;
  transition: color 300ms;
  color: #222638;
}

.emotion-2[data-checked='true'] label {
  color: #ffffff;
}

.emotion-2:not([data-checked='true']) label:hover {
  color: #641cb3;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="emotion-0 emotion-1"
          data-size="small"
        >
          <div
            class="emotion-2 emotion-3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-left"
            data-type="radio"
            role="button"
            style="--uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndc uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="«rb»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="left"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="«rb»"
                >
                  Left
                </label>
              </div>
            </div>
          </div>
          <div
            class="emotion-2 emotion-3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            data-checked="false"
            data-disabled="false"
            data-testid="switch-button-right"
            data-type="radio"
            role="button"
            style="--uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
            tabindex="0"
          >
            <div
              class="uv_17da2jl1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                aria-disabled="false"
                class="uv_475tndc uv_17da2jl3"
                data-checked="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="uv_17da2jl6"
                  id="«rf»"
                  name="test"
                  tabindex="-1"
                  type="radio"
                  value="right"
                />
                <svg
                  class="uv_17da2jl7"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="uv_17da2jl0"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="uv_17da2jl8"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  for="«rf»"
                >
                  Right
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
